--- a/starter-code/apple-pie-starter-code/index.html
+++ b/starter-code/apple-pie-starter-code/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
   <title>Apple Pie Recipe</title>
+  <link rel="stylesheet" href="/starter-code/apple-pie-starter-code/css/main.css">
+
 </head>
 <body>
-Apple Pies
+  <header class=header>
+    <img class=picture src="images/apple-pie.jpg" alt="apple pie"/>
+    <div>Apple Pies</div>
+  </header>
+ 
 This was my grandmother's apple pie recipe. I have never seen another one
 quite like it. It will always be my favorite and has won me several first place
 prizes in local competitions. I hope it becomes one of your favorites as well!
