--- a/starter-code/extra-french-soup/index.html
+++ b/starter-code/extra-french-soup/index.html
@@ -12,7 +12,11 @@
   We have been trying French onion soup in restaurants for years and my family
 and friends agree none can compare to my recipe for taste and simplicity of
 preparation.
+<div>
+  <img class="recipe" src="/starter-code/extra-french-soup/images/cooking-info.png"/> 
+</div>
 
+<hr/>
 Ingredients
 1/2 cup unsalted butter
 2 tablespoons olive oil
@@ -25,7 +29,11 @@ salt and pepper to taste
 4 slices provolone cheese
 2 slices Swiss cheese, diced
 1/4 cup grated Parmesan cheese
+<div>
+  <img class="recipe" src="/starter-code/extra-french-soup/images/cooking-info.png"/> 
+</div>
 
+<hr/>
 Directions
 Melt butter with olive oil in an 8 quart stock pot on medium heat. Add onions and
 continually stir until tender and translucent. Do not brown the onions.
