recipe image link fixed

--- a/starter-code/apple-pie-starter-code/index.html
+++ b/starter-code/apple-pie-starter-code/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <header class="header">
-    <link rel="stylesheet" href="/module1/lab5/lab-css-recipes-clone/starter-code/apple-pie-starter-code/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <hi class="h1">Apple Pies</hi>
   </header>
 <head>
@@ -10,17 +10,6 @@
 
 </head>
 <body>
-<<<<<<< HEAD
-  <header class=header>
-    <img class=picture src="images/apple-pie.jpg" alt="apple pie"/>
-    <div>Apple Pies</div>
-  </header>
- 
-This was my grandmother's apple pie recipe. I have never seen another one
-quite like it. It will always be my favorite and has won me several first place
-prizes in local competitions. I hope it becomes one of your favorites as well!
-=======
->>>>>>> 8578cb9b2d4a14ef528d21856aa367ba5230d947
 
 
 <p class="intro"> This was my grandmother's apple pie recipe. I have never seen another one
@@ -28,7 +17,7 @@ prizes in local competitions. I hope it becomes one of your favorites as well!
   prizes in local competitions. I hope it becomes one of your favorites as well!</p>
   
   <div>
-    <img class="recipe" src="/module1/lab5/lab-css-recipes-clone/starter-code/apple-pie-starter-code/images/recipe-info.png"/> 
+    <img class="recipe" src="./images/recipe-info.png"/> 
   </div>
 
   <hr/>
@@ -47,7 +36,7 @@ prizes in local competitions. I hope it becomes one of your favorites as well!
   </ul>
 
 <div>
-  <img class="recipe" src="/module1/lab5/lab-css-recipes-clone/starter-code/apple-pie-starter-code/images/cooking-info.png"/> 
+  <img class="recipe" src="./images/cooking-info.png"/> 
 </div>
 
 <hr/>
